--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
-
+		<header id="header">
+			<h1>Reports</h1>
+			<nav>
+				<ul>
+					<li><a href="#intro">Alpha Release</a></li>		
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Intro -->
 			<section id="intro" class="main style1 dark fullscreen">
