--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<h1>Reports</h1>
 			<nav>
 				<ul>
-					<li><a href="#intro">Alpha Release</a></li>		
+					<li><a href="https://drive.google.com/file/d/14JyFZOEfMQfrbV8hhSgVp_W99YkMCMLa/view?usp=sharing">Alpha Release</a></li>		
 				</ul>
 			</nav>
 		</header>
