--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 						<h2>Bubble Tea</h2>
 						<img src="images/bubble-tea.webp" alt="Bubble Tea">
 					</header>
+					<h3>Overview</h3>
 					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
 					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
 					<footer>
