--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Bubble Tea Market in the US</title>
+		<title> Bubble Tea Market in the US</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,12 +26,12 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Bubble Tea</h2>
-						<img src="images/bubble-tea.webp" alt="Bubble Tea">
+						<h2 style= "color:darkslategray"> Bubble Tea in the US</h2>
+						<img src="images/bubble-tea-img.webp" alt="Bubble Tea"  width="600" 
+						height="600" align="left"/>
 					</header>
-					<h3>Overview</h3>
-					<p>Welcome to <strong>Big Picture</strong> a responsive site template designed by <a href="https://html5up.net">HTML5 UP</a><br />
-					and released for free under the <a href="https://html5up.net/license">Creative Commons Attribution license</a>.</p>
+					<h3 style= "color:darkslategray" text-align:left>Overview</h3>
+					<p style="color: black" align="justify">Bubble tea, also known as boba or tapioca milk tea is a popular drink that originated in Taiwan in the 1980s. The bubble tea market is projected to reach $4.3 billion by the year 2027. </p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
