updated code to change the navigation

--- a/index.html
+++ b/index.html
@@ -27,15 +27,45 @@
 				<div class="content">
 					<header>
 						<h2 style= "color:darkslategray"> Bubble Tea in the US</h2>
-						<img src="images/bubble-tea-img.webp" alt="Bubble Tea"  width="600" 
-						height="600" align="left"/>
+						<img src="images/boba-hand-drawn.png" alt="Bubble Tea"  width="500" 
+						height="650" align="left" align ="top"/>
 					</header>
 					<h3 style= "color:darkslategray" text-align:left>Overview</h3>
 					<p style="color: black" align="justify">Bubble tea, also known as boba or tapioca milk tea is a popular drink that originated in Taiwan in the 1980s. The bubble tea market is projected to reach $4.3 billion by the year 2027. </p>
 					<footer>
-						<a href="#one" class="button style2 down">More</a>
+						<a href="#work" class="button style2 down">More</a>
 					</footer>
 				</div>
+			</section>
+
+			<!-- Visualizations -->
+			<section id="work" class="main style3 primary">
+				<div class="content">
+					<header>
+						<h2>Visualizations</h2>
+						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
+						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
+						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+					</header>
+
+					<!-- Gallery  -->
+						<div class="gallery">
+							<article class="from-left">
+								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
+							</article>
+							<article class="from-left">
+								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
+							</article>
+							<article class="from-right">
+								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
+							</article>
+						</div>
+
+				</div>
+				<a href="#one" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- One -->
@@ -61,46 +91,11 @@
 					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
 					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
 				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
-					</header>
-
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/fulls/01.jpg" class="image fit"><img src="images/thumbs/01.jpg" title="The Anonymous Red" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Airchitecture II" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/03.jpg" class="image fit"><img src="images/thumbs/03.jpg" title="Air Lounge" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Carry on" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/fulls/05.jpg" class="image fit"><img src="images/thumbs/05.jpg" title="The sparkling shell" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/fulls/06.jpg" class="image fit"><img src="images/thumbs/06.jpg" title="Bent IX" alt="" /></a>
-							</article>
-						</div>
-
-				</div>
+				<a href="#intro" class="button style2 down anchored">Next</a>
 			</section>
 
 		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
+		<!--	<section id="contact" class="main style3 secondary">
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
@@ -120,24 +115,22 @@
 					</div>
 				</div>
 			</section>
+		-->
 
 		<!-- Footer -->
 			<footer id="footer">
 
 				<!-- Icons -->
 					<ul class="icons">
-						<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
+						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>   
 					</ul>
 
 				<!-- Menu -->
-					<ul class="menu">
+					<!--<ul class="menu">
 						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
 					</ul>
+				-->
 
 			</footer>
 
