--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 		<style>
 			.bar {
-				fill: rgb(11, 71, 71);
+				fill: rgb(25, 104, 104);
 			}
 		</style>
 	</head>
@@ -55,7 +55,7 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="#barchart" class="image fit"><img src="images/thumbs/01.jpg" title="Bar Chart" alt="" /></a>
+								<a href="#barchart" class="image fit"> <img src="images/bar-chart-boba.png" title="Bar Chart" alt="" /></a>
 							</article>
 							<article class="from-right">
 								<a href="images/fulls/02.jpg" class="image fit"><img src="images/thumbs/02.jpg" title="Scatterplot" alt="" /></a>
@@ -79,7 +79,7 @@
 					<h2> Bar Chart Visualization</h2>
 					<h3>Ranking of the most popular boba chains by count of boba shops in the US</h3>
 			
-					<p>Kunfu Tea ranks number one in terms of the total number of boba shop establishments in the United States, followed by ShareTea.</p>
+					<p>KungFu Tea ranks number one in terms of the total number of boba shop establishments in the United States, followed by ShareTea.</p>
 					
 				</div>
 				<div class="content box style2">
