updated index.html to remove the gallery view

--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
 			</section>
 			
 			<!-- Visualizations -->
-			<section id="work" class="main style3 primary">
+			<!-- <section id="work" class="main style3 primary">
 				<div class="content">
 					<header>
 						<h2>Visualizations</h2>
 						<!--<p>   </p> -->
-					</header>
+					<!--</header> -->
 
 					<!-- Gallery  -->
-						<div class="gallery">
+						<!--<div class="gallery">
 							<article class="from-left">
 								<a href="images/scatterplot-boba.png" class="image fit"> <img src="images/thumbs/01.jpg" title="Scatterplot Chart" alt="" /></a>		
 							</article>
@@ -127,11 +127,11 @@
 							<article class="from-right">
 								<a href="images/fulls/04.jpg" class="image fit"><img src="images/thumbs/04.jpg" title="Bubble Chart" alt="" /></a>
 							</article>
-						</div>
+						</div> 
 
 				</div>
 				<a href="#intro" class="button style2 down anchored">Next</a>
-			</section>
+			</section> -->
 
 			<!-- Bar Chart -->
             <!--<section id="barchart" class="main style2 left dark fullscreen">
