added code for histogram chart visualization

--- a/index.html
+++ b/index.html
@@ -103,6 +103,18 @@
 				
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
+
+			<section id="two">
+				<div style="width: 100%; overflow: hidden;">
+					<div style="width: 600px; float: left;">
+						<!--<h2> Bar Chart Visualization</h2>
+						<h3>Ranking of the most popular boba chains by count of boba shops in the US</h3> -->
+					<script src="assets/js/histogram.js" ></script>
+					</div>
+				</div>
+			</section>
+
+
 			
 			<!-- Visualizations -->
 			<!-- <section id="work" class="main style3 primary">
