added code for bubble chart visualization

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
 						<h3>Ranking of the most popular boba chains by count of boba shops in the US</h3> -->
 					<script src="assets/js/histogram.js" ></script>
 					</div>
+					<div style="margin-left: 620px;"> 
+							
+					</div>
+					<script src="assets/js/bubblechart.js"></script>
+		 			 </div>
 				</div>
 			</section>
 
