changed the color of the charts

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script src="https://d3js.org/d3.v7.min.js"></script>
 		<style>
 			.bar {
-				fill:#69b3a2;
+				fill:#daaa77;
 			}
 		</style>
 		<style>
