updated the project title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div class="content">
 					<header>
 						
-						<h2 style= "color:darkslategray"> Bubble Tea in the US</h2>
+						<h2 style= "color:darkslategray"> Bubble Tea Market in the US</h2>
 						<!--<h2 style= "color:#69b3a2"> Bubble Tea in the US</h2>-->
 						<img src="images/boba-hand-drawn.png" alt="Bubble Tea"  width="500" 
 						height="650" align="left" align ="top"/>
