--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<nav>
 				<ul>
 					<li><a href="https://drive.google.com/file/d/14JyFZOEfMQfrbV8hhSgVp_W99YkMCMLa/view?usp=sharing">Alpha Release</a></li>		
-				    <li>Final Report</li>
+				    <li>Project Report</li>
 				</ul>
 			</nav>
 		</header>
