--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 	</head>
 	<body class="is-preload">
 		<header id="header">
-			<h1>Reports</h1>
+			<h1 style= "color:#7b562e">Reports</h1>
 			<nav>
 				<ul>
-					<li><a href="https://drive.google.com/file/d/14JyFZOEfMQfrbV8hhSgVp_W99YkMCMLa/view?usp=sharing">Alpha Release</a></li>		
-				    <li>Project Report</li>
+					<li><a href="https://drive.google.com/file/d/14JyFZOEfMQfrbV8hhSgVp_W99YkMCMLa/view?usp=sharing" style= "color:#7b562e">Alpha Release</a></li>		
+				    <li style= "color:#7b562e">Project Report</li>
 				</ul>
 			</nav>
 		</header>
@@ -42,12 +42,12 @@
 				<div class="content">
 					<header>
 						
-						<h2 style= "color:darkslategray"> Bubble Tea Market in the US</h2>
+						<h2 style= "color:#7b562e"> Bubble Tea Market in the US</h2>
 						<!--<h2 style= "color:#69b3a2"> Bubble Tea in the US</h2>-->
 						<img src="images/boba-hand-drawn.png" alt="Bubble Tea"  width="500" 
 						height="650" align="left" align ="top"/>
 					</header>
-					<h3 style= "color:darkslategray" align ="left" align ="bottom">Overview</h3>
+					<h3 style= "color: #7b562e" align ="left" align ="bottom">Overview</h3>
 					<p style="color: black" align="justify">Bubble tea, also known as boba or tapioca milk tea is a popular drink that originated in Taiwan in the 1980s. The bubble tea market is projected to reach $4.3 billion by the year 2027. </p>
 					
 				</div>
