updated content for the histogram chart

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<header>
 						<h3>Data</h3>
 					</header>
-					<p>The dataset for this project was collected from Yelp API and different boba shops websites
+					<p>The dataset for this project was collected from Yelp's Fusion API and different boba shops websites
 						through web scraping in python. Data for the boba shops in the Bay Area from Kaggle https://www.kaggle.com/vnxiclaire/bobabayarea was also used.</p>
 				</div>
 				<div class="content box style2">
@@ -111,7 +111,7 @@
 					bottom: 0px;
 					right: 40px;
 					border: 4px solid #7b562e; float: right;">
-					<p> Shows the distribution of ratings for boba shops in the Bay Area. In the Bay Area, the customer satisfaction level and service quality is on the higher side. </p>
+					<p> Shows the distribution of ratings for boba shops in the Bay Area. In the Bay Area, the customer satisfaction level is on the higher side. The most common Yelp rating for all cities is between 3.5 and 4.5 </p>
 				</div>
 				<div style="width: 600px; float: left;">
 					<script src="assets/js/histogram.js" ></script>
