updated content for bubble chart visualization

--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@
 					left: 30px;
 					right: 60px;
 					border: 4px solid #7b562e; float: left;">
-					<p> Bubble Chart Visualization to show both popularity and demand for boba in the Bay Area. The size of the bubble determines the total count of boba shops. Both San Jose and San Francisco have the highest number of boba shops in the Bay Area suggesting that there is a much greater demand for bubble tea in those cities. </p>
+					<header>
+						<h3>Comparison between Bay Area cities based on the count of boba shops</h3>
+					</header>
+					<p> Bubble Chart Visualization to show both popularity and demand for boba in the Bay Area. The size of the bubble determines the total count of boba shops. Both San Jose and San Francisco have the highest number of boba shops in the Bay Area suggesting that there is a much greater demand for bubble tea in those cities. San Mateo and Oakland have an equal number of boba shops. </p>
 				</div>
 			</section>
 		
