--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h3>Data</h3>
 					</header>
 					<p>The dataset for this project was collected from Yelp's Fusion API and different boba shops websites
-						through web scraping in python. Data for the boba shops in the Bay Area from Kaggle https://www.kaggle.com/vnxiclaire/bobabayarea was also used.</p>
+						through web scraping in Python. Data for the boba shops in the Bay Area from Kaggle https://www.kaggle.com/vnxiclaire/bobabayarea was also used.</p>
 				</div>
 				<div class="content box style2">
 					<header>
@@ -76,7 +76,7 @@
 	<!-- BarChart Visualization -->
 			<section id="two">
 				<div style="width:600px;position: relative;
-					top:80px;
+					top:100px;
 					bottom: 0px;
 					right: 40px;
 					border: 4px solid #7b562e; float: right;">
@@ -96,7 +96,7 @@
 					<script src="assets/js/scatterplot.js" ></script>
 				</div>
 				<div style="width:600px;position: relative;
-					top:80px;
+					top:160px;
 					bottom: 0px;
 					left: 30px;
 					right: 60px;
@@ -107,7 +107,7 @@
         <!-- Histogram Chart Visualization -->
 			<section id="two">
 				<div style="width:600px;position: relative;
-					top:80px;
+					top:120px;
 					bottom: 0px;
 					right: 40px;
 					border: 4px solid #7b562e; float: right;">
@@ -126,8 +126,8 @@
 					<script src="assets/js/bubblechart.js" ></script>
 				</div>
 				<div style="width:600px;position: relative;
-					top:80px;
-					bottom: 0px;
+					top:200px;
+					bottom: 30px;
 					left: 30px;
 					right: 60px;
 					border: 4px solid #7b562e; float: left;">
