--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 					</header>
 					<p>The data from Kaggle was already in tabular form and nicely formatted by columns, however, I did have to do a substantial data cleanup for the
 						data collected from Yelp API. The data will was processed using Python and the Pandas framework and saved as a csv file. I have used boba shop names, total number of bubble tea
-						shops, location, city, ratings, etc. for this project.</p>
+						shops, city, ratings, etc. for this project.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
