updated code for bubblechart and added more cities

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
 				</div>
 			</section>
             <!-- Bubble Chart Visualization -->
-			<section id="two">
-				<div style="width: 600px; float: right; position: relative;
+			<section class="section" id="bubblechart">
+				<div id="bubblechart" style="width: 600px; float: right; position: relative;
 				top:0px;
 				bottom: 0px;
-				left: 30px;">
+				left: 30px;"></div>
 					<script src="assets/js/bubblechart.js" ></script>
-				</div>
+				
 				<div style="width:600px;position: relative;
 					top:200px;
 					bottom: 30px;
@@ -137,15 +137,14 @@
 					<p> Bubble Chart Visualization to show both popularity and demand for boba in the Bay Area. The size of the bubble determines the total count of boba shops. Both San Jose and San Francisco have the highest number of boba shops in the Bay Area suggesting that there is a much greater demand for bubble tea in those cities. San Mateo and Oakland have an equal number of boba shops. </p>
 				</div>
 			</section>
-		
-		<!-- Footer -->
-			<footer id="footer">
-				<!-- Icons -->
-					<ul class="icons">
-						<li><a href="https://www.linkedin.com/in/chhodensherpa/" class="icon brands fa-linkedin-in"><span class="label">GitHub</span></a></li>
-						<li><a href="https://github.com" class="icon brands fa fa-github"><span class="label">GitHub</span></a></li>   
-					</ul>
-			</footer>
+			   <!-- Footer -->
+			   <footer id="footer">
+                <!-- Icons -->
+                    <ul class="icons">
+                        <li><a href="https://www.linkedin.com/in/chhodensherpa/" class="icon brands fa-linkedin-in"><span class="label">GitHub</span></a></li>
+                        <li><a href="https://github.com" class="icon brands fa fa-github"><span class="label">GitHub</span></a></li>   
+                    </ul>
+            </footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -156,6 +155,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
