--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h3>Data</h3>
 					</header>
 					<p>The dataset for this project was collected from Yelp's Fusion API and different boba shops websites
-						through web scraping in Python. Data for the boba shops in the Bay Area from Kaggle https://www.kaggle.com/vnxiclaire/bobabayarea was also used.</p>
+						through web scraping in Python. Data for the boba shops in the Bay Area was collected from <a href="https://www.kaggle.com/vnxiclaire/bobabayarea">Kaggle.</a></p>
 				</div>
 				<div class="content box style2">
 					<header>
@@ -101,7 +101,7 @@
 					left: 30px;
 					right: 60px;
 					border: 4px solid #7b562e; float: left;">
-					<p> There is a positive correlation between the price of a boba drink and the cost of living index per city. The price variable has been calculated using the average price of the most popular classic milk tea flavor from five boba shops. Both San Francisco and San Jose have the highest cost of living index and boba is more expensive in SF and SJ. </p>
+					<p> There is a positive correlation between the price of a boba drink and the cost of living index per city. The price variable has been calculated using the average price of the most popular classic milk tea flavor from five boba shops. Both San Francisco and San Jose have the highest cost of living index and boba is more expensive in SF and SJ. <a href="https://vizhub.com/chhodens/2c73921ac71f4499b508f040ed18303a?edit=files&file=index.html">Visualization</a> </p>
 				</div>
 			</section>
         <!-- Histogram Chart Visualization -->
@@ -132,9 +132,9 @@
 					right: 60px;
 					border: 4px solid #7b562e; float: left;">
 					<header>
-						<h3>Comparison between Bay Area cities based on the count of boba shops</h3>
+						<h3>Bubble Chart Visualization to show the count for Bay Area Boba Shops</h3>
 					</header>
-					<p> Bubble Chart Visualization to show both popularity and demand for boba in the Bay Area. The size of the bubble determines the total count of boba shops. Both San Jose and San Francisco have the highest number of boba shops in the Bay Area suggesting that there is a much greater demand for bubble tea in those cities. San Mateo and Oakland have an equal number of boba shops. </p>
+					<p> Shows popularity and demand for boba in the Bay Area. The size of the bubble determines the total count of boba shops. Both San Jose and San Francisco have the highest number of boba shops in the Bay Area suggesting that there is a much greater demand for bubble tea in those cities. San Mateo and Oakland have an equal number of boba shops. </p>
 				</div>
 			</section>
 			   <!-- Footer -->
