--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
 
-	<!-- BarChart Visualization -->
-			<section id="two">
+		<!-- BarChart Visualization -->
+			<section class="section" id="barchart">
 				<div style="width:600px;position: relative;
 					top:100px;
 					bottom: 0px;
@@ -86,18 +86,17 @@
 					<script src="assets/js/bar-chart.js" ></script>
 				</div>
 			</section>
-
 		<!-- Scatterplot Visualization -->
-			<section id="two">
-				<div style="width: 600px; float: right; position: relative;
+			<section class="section" id="scatterplot">
+				<div id="scatterplot" style="width: 600px; float: right; position: relative;
 				top:0px;
 				bottom: 0px;
-				left: 30px;">
+				left: 30px;"></div>
 					<script src="assets/js/scatterplot.js" ></script>
-				</div>
+				
 				<div style="width:600px;position: relative;
-					top:160px;
-					bottom: 0px;
+					top:200px;
+					bottom: 30px;
 					left: 30px;
 					right: 60px;
 					border: 4px solid #7b562e; float: left;">
