--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<!--
+<!-- Template Credits:
 	Big Picture by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<script src="https://d3js.org/d3.v6.min.js"></script>
+		<link rel="icon" type="image/x-icon" href="/images/fulls/favicon.ico">
 		<style>
 			.bar {
 				fill:#daaa77;
